PCS BAckup 26Dec2023/Backup-Source/objects/Vision_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vision Alerts</relationshipLabel>
        <relationshipName>Vision_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_User_is_Owner__c</fullName>
        <formula>CreatedById == $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User is Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GCP_Opportunity_Tracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP Opportunity Tracker</label>
        <referenceTo>Phoenix_GCP_Opportunity_Tracker__c</referenceTo>
        <relationshipLabel>Vision Alerts</relationshipLabel>
        <relationshipName>Vision_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GCP_SFDC_100pct_Analysis_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GCP SFDC 100pct Analysis SKU</label>
        <referenceTo>GCP_SFDC_100pct_Analysis_SKU__c</referenceTo>
        <relationshipLabel>Vision Alerts</relationshipLabel>
        <relationshipName>Vision_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Vision Alerts</relationshipLabel>
        <relationshipName>Vision_Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vision_Alert_Topic__c</fullName>
        <label>Alert Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Alert_Type__c</fullName>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GCP 100% Customer Analysis</fullName>
                </value>
                <value>
                    <fullName>DOH</fullName>
                </value>
                <value>
                    <fullName>Net Sales</fullName>
                </value>
                <value>
                    <fullName>New Alert</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vision_Notification_Comment__c</fullName>
        <label>Notification Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Vision_Notification_Due_Date__c</fullName>
        <label>Notification Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Notification_Repeat_Time__c</fullName>
        <label>Notification Repeat Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Repeat_Date_1__c</fullName>
        <formula>Vision_Notification_Due_Date__c -  10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repeat Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Repeat_Date_2__c</fullName>
        <formula>Vision_Notification_Due_Date__c - 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repeat Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Repeat_Date_3__c</fullName>
        <formula>Vision_Notification_Due_Date__c - 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Repeat Date 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vision_Repeat_Days_Before_1__c</fullName>
        <label>Repeat Days Before 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Repeat_Days_Before_2__c</fullName>
        <label>Repeat Days Before 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Repeat_Days_Before_3__c</fullName>
        <label>Repeat Days Before 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vision_Repeat_Days_Before_Checkbox_1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Repeat Days Before Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Repeat_Days_Before_Checkbox_2__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Repeat Days Before Checkbox 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Repeat_Days_Before_Checkbox_3__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Repeat Days Before Checkbox 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_Stop_Notification_Checkbox_5__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stop Notification Checkbox 5</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision_isActiveAlert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isActiveAlert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vision_Stop_Notification_5__c</fullName>
        <label>Stop Notification 5</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vision Alert</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Vision_Alert_Topic__c</columns>
        <columns>Vision_Notification_Comment__c</columns>
        <columns>Vision_Notification_Due_Date__c</columns>
        <columns>Vision_Notification_Repeat_Time__c</columns>
        <columns>GCP_Opportunity_Tracker__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Vision_Reminders</fullName>
        <columns>NAME</columns>
        <columns>Vision_Alert_Type__c</columns>
        <columns>Vision_Notification_Due_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Current_User_is_Owner__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Vision Reminders</label>
    </listViews>
    <nameField>
        <label>Vision Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vision Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>